welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:1: error: value unary_! is not a member of Unit
  while (!positionFinale()){
         ^ColumnByColumn:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^ColumnByColumn:8: warning: enclosing method positionFinale has result type Unit: return value discarded
    return true
    ^ColumnByColumn:10: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^ColumnByColumn:10: warning: enclosing method positionFinale has result type Unit: return value discarded
  return false
  ^