welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  while (!positionFinale()){
    
  }
}

def positionFinale(){
  if (getX()==getMondeLargeur() && getY()==getMondeHauteur()){
    return true
  }
  return false
}

def positionSuivante(){
  var cpt : Int = 0
  for (i <- 0 to getMondeLargeur()-1){
    for (j <- 0 to getMondeHauteur()-1){
      cpt=cpt+1
      setPos(i,j)
      ecritMessage(cpt)
    }
  }
}